styles.css
.gay-toolbar-container {
    position: absolute;
    left: 0;
    right: 0;
    bottom: 0;
    transition: bottom 0.05s linear;
}
.gay-toolbar {
    /* From https://css.glass */
    border-radius: 8px;
    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
    backdrop-filter: blur(5px);
    -webkit-backdrop-filter: blur(5px);
}


/* ------------------GRID------------------ */

.slot {
    display: flex;
    justify-content: center;
    align-items: center;
}

.gay-button-container {
    width: 100%;
    height: 100%;
}

.hovering-button-container {
    opacity: 0%;
}

.gay-button {
    /* background: radial-gradient(black, pink) padding-box, conic-gradient(lightblue, pink, lightblue, pink) border-box; */
    border-radius: 8px;
    border: 4px solid transparent;
    width: 100%;
    height: 100%;
    padding: 0px;
}

.gay-icon-lmao {
    width: 100%;
    height: 100%;
}

.button-halo {
    scale: 1.5;
}

.wiggle {
    animation: wiggle 0.5s infinite ease-in-out;
}

@keyframes wiggle {

    0%,
    100% {
        transform: rotate(0deg);
    }

    25% {
        transform: rotate(-5deg);
    }

    75% {
        transform: rotate(5deg);
    }
}




/* ------------------SETTINGS------------------ */

.gay-settings-container {
    border: solid 1px #ccc;
    border-radius: 8px;
    padding: 20px;
    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
    display: flex;
    flex-direction: column;
    padding: 8px;
}
  
.background-options {
    grid-row-start: 4; /* Last row */
    grid-column: 1 / 3; /* Span the entire row */
    border-radius: 8px;
    margin-top: 8px;
    padding: 8px;
    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
    backdrop-filter: blur(5px);
    -webkit-backdrop-filter: blur(5px);
}
.background-options-header {
    display: flex;
    justify-content: space-between;
}

.scroleable {
    overflow-y: auto;
    max-height: 50vh;
}

.settings-main {
    display: grid;
    grid-template-columns: 1fr 1fr;
}

.settings-footer {
    display: flex;
    justify-content: space-between;
    flex-direction: row-reverse;
    margin-top: 8px;
}

.gay-numeric-input {
    margin-right: 8px;
    text-align: center;
}

.gay-color-input {
    height: auto;
    margin-right: 8px;
    box-shadow: 0 0 4px rgb(202, 11, 11)
}

